# TinySql

./: .gitignore
client/src/: App.jsx
client/src/components/: ResultTable.jsx  SqlEditor.jsx  StatusBar.jsx
client/src/services/: api.js
scripts/: generate_benchmark.sh  test_errors.sql  test_success.sql
server/: CMakeLists.txt
server/api/: CMakeLists.txt
server/api/include/: ApiServer.h
server/api/src/: ApiServer.cpp  main.cpp
server/data_structures/: CMakeLists.txt
server/data_structures/include/: BSTIndex.h  BTreeIndex.h  Index.h  IndexFactory.h
server/data_structures/src/: BSTIndex.cpp  BTreeIndex.cpp  Index.cpp  IndexFactory.cpp
server/query_processor/: CMakeLists.txt
server/query_processor/include/: Lexer.h  Parser.h  QueryExecutor.h  SemanticValidator.h
server/query_processor/src/: Lexer.cpp  Parser.cpp  QueryExecutor.cpp  SemanticValidator.cpp
server/stored_data_manager/: CMakeLists.txt
server/stored_data_manager/include/: Encryptor.h  PathUtils.h  StorageManager.h  SystemCatalog.h  TableFile.h
server/stored_data_manager/src/: Encryptor.cpp  PathUtils.cpp  StorageManager.cpp  SystemCatalog.cpp  TableFile.cpp
